--- a/nyuadCourseReview/Base.lproj/Main.storyboard
+++ b/nyuadCourseReview/Base.lproj/Main.storyboard
@@ -319,13 +319,13 @@
                                                     <rect key="frame" x="7" y="11" width="363" height="250"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Digital logic" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="60w-dv-Lsv">
-                                                            <rect key="frame" x="8" y="8" width="346" height="32"/>
+                                                            <rect key="frame" x="8" y="8" width="346" height="32.5"/>
                                                             <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="21"/>
                                                             <color key="textColor" red="0.41481143240000001" green="0.123166047" blue="0.62114572530000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="By: Ozgur Sinanulu" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Gz-yi-bAg">
-                                                            <rect key="frame" x="8" y="36" width="105" height="17"/>
+                                                            <rect key="frame" x="8" y="36.5" width="105" height="16.5"/>
                                                             <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="12"/>
                                                             <color key="textColor" red="0.40000000000000002" green="0.44705882349999998" blue="0.47058823529999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <nil key="highlightedColor"/>
@@ -377,7 +377,7 @@
                                                                     <rect key="frame" x="226" y="15" width="124" height="124"/>
                                                                     <subviews>
                                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10 reviews" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uhb-sR-Phc">
-                                                                            <rect key="frame" x="28" y="52" width="68" height="20"/>
+                                                                            <rect key="frame" x="28" y="52.5" width="68" height="19.5"/>
                                                                             <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="14"/>
                                                                             <color key="textColor" red="0.40000000000000002" green="0.44705882349999998" blue="0.47058823529999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                             <nil key="highlightedColor"/>
@@ -409,7 +409,7 @@
                                                             </constraints>
                                                         </stackView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="There are no reviews yet for this course, let's change that together by leaving a review..." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W52-3n-zdD">
-                                                            <rect key="frame" x="25" y="48" width="313" height="151"/>
+                                                            <rect key="frame" x="25" y="48.5" width="313" height="150.5"/>
                                                             <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="17"/>
                                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.59999999999999998" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
@@ -478,19 +478,26 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="59R-Be-zy1">
+                                <rect key="frame" x="169.5" y="315" width="37" height="37"/>
+                                <color key="color" red="0.41481143240000001" green="0.123166047" blue="0.62114572530000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="Sle-Az-NtO" firstAttribute="top" secondItem="TkX-eR-OBh" secondAttribute="bottom" id="11I-6h-pdK"/>
                             <constraint firstItem="Gfe-QX-TRE" firstAttribute="top" secondItem="omD-EQ-vDG" secondAttribute="bottom" id="1O4-9M-gan"/>
                             <constraint firstAttribute="trailing" secondItem="Sle-Az-NtO" secondAttribute="trailing" id="69Z-HZ-yxD"/>
+                            <constraint firstItem="59R-Be-zy1" firstAttribute="centerY" secondItem="XR1-Ly-dHe" secondAttribute="centerY" id="7Xu-I8-NHQ"/>
                             <constraint firstItem="omD-EQ-vDG" firstAttribute="leading" secondItem="XR1-Ly-dHe" secondAttribute="leading" id="D4u-hr-zMP"/>
                             <constraint firstAttribute="trailing" secondItem="omD-EQ-vDG" secondAttribute="trailing" id="W6A-c6-jua"/>
+                            <constraint firstItem="59R-Be-zy1" firstAttribute="centerX" secondItem="XR1-Ly-dHe" secondAttribute="centerX" id="Z2V-Z7-XiN"/>
                             <constraint firstItem="omD-EQ-vDG" firstAttribute="top" secondItem="Sle-Az-NtO" secondAttribute="bottom" id="ddJ-tj-d8q"/>
                             <constraint firstItem="Sle-Az-NtO" firstAttribute="leading" secondItem="XR1-Ly-dHe" secondAttribute="leading" id="m5M-a9-Qjb"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="activityIndicator" destination="59R-Be-zy1" id="hQR-1q-Bpy"/>
                         <outlet property="catTitle" destination="NJV-Vn-dOT" id="XLi-pM-tYM"/>
                         <outlet property="tableView" destination="omD-EQ-vDG" id="Hmz-kn-bGn"/>
                         <segue destination="f0I-d8-5wI" kind="show" identifier="goToReview" id="kxB-Z2-zMZ"/>
@@ -676,6 +683,7 @@
                         <outlet property="nameTxt" destination="6HE-IF-dRD" id="PJH-2B-lHK"/>
                         <outlet property="profTxt" destination="snb-nQ-lqi" id="RoK-60-DWL"/>
                         <segue destination="tgf-L3-J1o" kind="unwind" identifier="unwindToCoursesListVC3" unwindAction="unwindToCoursesListVC3WithSegue:" id="Upq-j4-6id"/>
+                        <segue destination="tgf-L3-J1o" kind="unwind" identifier="unwindToCoursesList" unwindAction="unwindToCoursesListWithSegue:" id="upg-K4-Yek"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="e5f-nB-W4B" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1536,13 +1544,19 @@
                                     <constraint firstAttribute="height" constant="40" id="dBN-xu-X7l"/>
                                 </constraints>
                             </view>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" semanticContentAttribute="playback" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="bLZ-iV-Z8Y">
+                                <rect key="frame" x="169" y="315.5" width="37" height="37"/>
+                                <color key="color" red="0.41481143240000001" green="0.123166047" blue="0.62114572530000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="Bby-Vl-vWe" secondAttribute="trailing" id="8ti-7a-bij"/>
                             <constraint firstItem="a11-kN-uYB" firstAttribute="trailing" secondItem="jZt-qh-lxo" secondAttribute="trailing" id="Dyb-9I-d7U"/>
                             <constraint firstItem="Yi9-ol-Itv" firstAttribute="top" secondItem="MMo-R1-3tF" secondAttribute="bottom" constant="20" id="FXL-yX-zfr"/>
+                            <constraint firstItem="bLZ-iV-Z8Y" firstAttribute="centerX" secondItem="h9p-AY-PsQ" secondAttribute="centerX" id="Gdf-00-IpR"/>
                             <constraint firstItem="Bby-Vl-vWe" firstAttribute="leading" secondItem="h9p-AY-PsQ" secondAttribute="leading" id="K2Y-r1-u4i"/>
+                            <constraint firstItem="bLZ-iV-Z8Y" firstAttribute="centerY" secondItem="h9p-AY-PsQ" secondAttribute="centerY" id="K9w-TF-KBr"/>
                             <constraint firstItem="jZt-qh-lxo" firstAttribute="top" secondItem="a11-kN-uYB" secondAttribute="bottom" constant="34" id="L0v-5G-WAl"/>
                             <constraint firstItem="fS3-zd-ar5" firstAttribute="centerX" secondItem="h9p-AY-PsQ" secondAttribute="centerX" id="On8-3z-uMF"/>
                             <constraint firstItem="CdR-ot-me7" firstAttribute="leading" secondItem="h9p-AY-PsQ" secondAttribute="leading" id="Row-of-sSk"/>
@@ -1556,7 +1570,9 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="activityIndicator" destination="bLZ-iV-Z8Y" id="QMT-PJ-YZA"/>
                         <outlet property="pickerView" destination="jZt-qh-lxo" id="SSS-pc-Bh2"/>
+                        <outlet property="viewofProfs" destination="fS3-zd-ar5" id="gee-Fc-yxJ"/>
                         <segue destination="6QF-G0-Vms" kind="show" identifier="goToProfList" id="6OO-gd-UAU"/>
                         <segue destination="O7w-ra-eBJ" kind="unwind" identifier="unwindToLanding2" unwindAction="unwindToLanding2WithSegue:" id="gch-rH-GbR"/>
                     </connections>
@@ -1928,7 +1944,7 @@
         <image name="thumbsup" width="98" height="110"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="u5a-02-P1i"/>
-        <segue reference="r5K-Ba-utR"/>
+        <segue reference="kxB-Z2-zMZ"/>
+        <segue reference="wIi-Ka-IH6"/>
     </inferredMetricsTieBreakers>
 </document>
