Swipe down to cancel view
added this function

--- a/nyuadCourseReview/Base.lproj/Main.storyboard
+++ b/nyuadCourseReview/Base.lproj/Main.storyboard
@@ -1944,7 +1944,7 @@
         <image name="thumbsup" width="98" height="110"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="kxB-Z2-zMZ"/>
+        <segue reference="r5K-Ba-utR"/>
         <segue reference="wIi-Ka-IH6"/>
     </inferredMetricsTieBreakers>
 </document>
